Updated quick access

--- a/src/index.html
+++ b/src/index.html
@@ -34,8 +34,8 @@
     </div>
     <section id="quick-access">
         <header>
-            <h2>GREETINGS</h2>
-            <h3>Name</h3>
+            <h2>Hey</h2>
+            <h3>you</h3>
         </header>
         <article id="recent-trips">
             <h2>Recent trips</h2>
@@ -71,7 +71,6 @@
             </div>
         </article>
         <input type="button" id="send-package" value="Send Package">
-        <h4>Shared locations</h4>
         <button id="open-settings">Settings</button>
     </section>
 </main>
@@ -125,8 +124,6 @@
     <div class="searchHomeEndpoint">
         <input type="text" name="homeEndpoint" id="homeEndpoint">
         <ul>
-            <li>test</li>
-            <li>test</li>
         </ul>
     </div>
     <form action="signup" method="post">
