added select for all available endpoints

--- a/src/index.html
+++ b/src/index.html
@@ -330,13 +330,20 @@
         <label id="package-title" for="select-location-text">Send package</label>
         <img src="./assets/images/Lightspeed.png" alt="LightspeedLogo">
 
+
         <label class="package-location" for="p-from">Send package from:</label>
-        <input type="text" id="p-from">
+        <select class="endpointSelect" id="p-from">
+
+        </select>
+
 
         <ion-icon size="large" name="swap-vertical-outline"></ion-icon>
 
+
         <label class="package-location" for="p-destination">Send package to:</label>
-        <input type="text" id="p-destination">
+        <select class="endpointSelect" id="p-destination">
+
+        </select>
 
 
         <h2>Payment method</h2>
