Tried implementing order functionality (did not work) other group member will finish it.

--- a/src/index.html
+++ b/src/index.html
@@ -332,15 +332,16 @@
 
 
         <label class="package-location" for="p-from">Send package from:</label>
+        <input type="hidden" disabled id="select-p-from">
         <select class="endpointSelect" id="p-from">
 
         </select>
 
-
         <ion-icon size="large" name="swap-vertical-outline"></ion-icon>
 
-
         <label class="package-location" for="p-destination">Send package to:</label>
+        <input type="hidden" disabled id="select-p-destination">
+
         <select class="endpointSelect" id="p-destination">
 
         </select>
