--- a/src/index.html
+++ b/src/index.html
@@ -220,7 +220,7 @@
     </header>
     <ul>
         <li id="name-settings">
-            <h3>Name</h3>
+            <h3>Display Name</h3>
             <p></p>
             <input type="text" id="new-name" class="hidden">
             <a href="#" id="edit-name">Edit</a>
@@ -404,6 +404,7 @@
 
 <script src="assets/js/templates.js"></script>
 <script src="assets/js/api.js"></script>
+<script src="assets/js/cache.js"></script>
 <script src="assets/js/components/authentication.js"></script>
 <script src="assets/js/components/friends.js"></script>
 <script src="assets/js/components/navigation.js"></script>
