--- a/src/index.html
+++ b/src/index.html
@@ -72,6 +72,7 @@
         </article>
         <input type="button" id="send-package" value="Send Package">
         <button id="open-settings">Settings</button>
+        <button id="logout">Log out</button>
     </section>
 </main>
 
