Add custom markers

--- a/src/index.html
+++ b/src/index.html
@@ -402,7 +402,10 @@
 </aside>
 <script src="https://cdn.jsdelivr.net/sockjs/0.3.4/sockjs.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vertx/3.5.4/vertx-eventbus.min.js"></script>
+<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+        integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="         crossorigin=""></script>
 
+<script src="assets/js/components/leaflet-color-markers.js"></script>
 <script src="assets/js/templates.js"></script>
 <script src="assets/js/api.js"></script>
 <script src="assets/js/cache.js"></script>
@@ -423,8 +426,6 @@
 <script type="module" src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.esm.js"></script>
 
 <script src="assets/js/components/map.js"></script>
-<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-        integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-        crossorigin=""></script>
+
 </body>
 </html>
