--- a/src/index.html
+++ b/src/index.html
@@ -220,6 +220,10 @@
         </button>
     </header>
     <ul>
+        <li id="userName-setting">
+            <h3>Username</h3>
+            <p></p>
+        </li>
         <li id="name-settings">
             <h3>Display Name</h3>
             <p></p>
@@ -240,6 +244,17 @@
             <h3>Subscription</h3>
             <p></p>
             <a href="#" id="edit-subscription">Edit</a>
+        </li>
+        <li id="shareLocation-setting-change">
+            <h3>Share location to friends</h3>
+            <label class="custom-checkbox">
+                <input  type="checkbox" id="update-shareLocation">
+                <span></span>
+            </label>
+        </li>
+        <li id="address-setting">
+            <h3>Address</h3>
+            <p></p>
         </li>
         <!-- <li id="business-settings">
             <h3>Business user</h3>
