Add current location button to the map

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,9 @@
 
 
     </div>
+    <div id="current-location" class="leaflet-bottom leaflet-right">
+        <span></span>
+    </div>
     <div class="searchbar">
         <label for="searchBox-1">
             <ion-icon name="search-outline"></ion-icon>
