--- a/src/index.html
+++ b/src/index.html
@@ -37,8 +37,15 @@
             <h2>Hey</h2>
             <h3>you</h3>
         </header>
-        <article id="recent-trips">
-            <h2>Recent trips</h2>
+        <article id="trips">
+            <h2>Trips</h2>
+            <div id="change-trips">
+                <input type="radio" id="recent" name="trip">
+                <label id="label-recent" for="recent">Recent</label>
+                <input type="radio" id="favorite" name="trip">
+                <label id="label-favorite" for="favorite">Favourite</label>
+            </div>
+
             <ul>
                 <li>
                     <h2>Work</h2>
@@ -113,7 +120,6 @@
         <button type="submit">Sign in</button>
     </form>
 </aside>
-
 
 <aside id="signup">
     <header>
