finished completing add endpoint to favourites

--- a/src/index.html
+++ b/src/index.html
@@ -314,7 +314,11 @@
         <label for="select-location-text">Travel to</label>
         <input type="hidden" disabled id="select-location">
         <input type="text" disabled id="select-location-text" value="Location">
-
+        <h3>Favourite endpoint</h3>
+        <label class="custom-checkbox" id="favourite-route">
+            <input  type="checkbox" id="favourite-endpoint">
+            <span></span>
+        </label>
         <h2>Pod type</h2>
         <div id="pod-select">
             <input type="hidden" id="selected-pod" value="standard">
