--- a/src/index.html
+++ b/src/index.html
@@ -32,11 +32,24 @@
         <ul>
         </ul>
     </div>
-    <section id="quick-access">
+    <section id="quick-access" class="transport">
         <header>
             <h2>Hey</h2>
             <h3>you</h3>
+            <div class="transport">
+                <span id="travel-status">Pod on it's way to you</span>
+                <div class="timeline"></div>
+                <span id="travel-estm-time">10s</span>
+            </div>
         </header>
+        <article id="travel-view" class="transport">
+            <h2>Travel information</h2>
+            <ul>
+                <li>Pod parking</li>
+                <li>Your location</li>
+                <li>Destination</li>
+            </ul>
+        </article>
         <article id="recent-trips">
             <h2>Recent trips</h2>
             <ul>
