Add legend toggle button

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,10 @@
     <div id="current-location" class="leaflet-bottom leaflet-right">
         <span></span>
     </div>
+    <div id="show-legend" class="leaflet-bottom leaflet-right">
+        <ion-icon name="information-circle" class="hidden"></ion-icon>
+        <ion-icon name="information" ></ion-icon>
+    </div>
     <div class="searchbar">
         <label for="searchBox-1">
             <ion-icon name="search-outline"></ion-icon>
@@ -251,7 +255,7 @@
         <li id="shareLocation-setting-change">
             <h3>Share location to friends</h3>
             <label class="custom-checkbox">
-                <input  type="checkbox" id="update-shareLocation">
+                <input type="checkbox" id="update-shareLocation">
                 <span></span>
             </label>
         </li>
@@ -421,7 +425,8 @@
 <script src="https://cdn.jsdelivr.net/sockjs/0.3.4/sockjs.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vertx/3.5.4/vertx-eventbus.min.js"></script>
 <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-        integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
+        integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+        crossorigin=""></script>
 <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
 
 <script src="assets/js/components/leaflet-color-markers.js"></script>
