Added travel information

--- a/src/index.html
+++ b/src/index.html
@@ -32,18 +32,21 @@
         <ul>
         </ul>
     </div>
-    <section id="quick-access" class="transport">
+    <section id="quick-access">
         <header>
             <h2>Hey</h2>
             <h3>you</h3>
-            <div class="transport">
+            <div class="traveling">
                 <span id="travel-status">Pod on it's way to you</span>
-                <div class="timeline"></div>
-                <span id="travel-estm-time">10s</span>
+                <div class="timeline">
+                    <img src="assets/images/pod.png" class="travel-pod" alt="pod" title="pod">
+                </div>
+                <span id="travel-estm-time"></span>
             </div>
         </header>
-        <article id="travel-view" class="transport">
+        <article id="travel-view" class="traveling">
             <h2>Travel information</h2>
+            <img src="assets/images/pod.png" class="travel-pod" alt="pod" title="pod">
             <ul>
                 <li>Pod parking</li>
                 <li>Your location</li>
