added check phone

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,8 @@
     <link rel="manifest" href="manifest.webmanifest" crossorigin="use-credentials">
 </head>
 <body>
-
+<p class="warning-screen">Please use phone emulation and refresh the page.</p>
+<p class="warning-screen">recommended: Iphone X (375x812).</p>
 <main>
     <div id="map">
 
