--- a/src/index.html
+++ b/src/index.html
@@ -31,14 +31,14 @@
         <ion-icon name="information-circle" class="hidden"></ion-icon>
         <ion-icon name="information"></ion-icon>
     </div>
-    <div class="searchbar">
-        <label for="searchBox-1">
-            <ion-icon name="search-outline"></ion-icon>
-        </label>
-        <input type="text" id="searchBox-1" name="searchbox" placeholder="Where are we going?">
-        <ul>
-        </ul>
-    </div>
+        <div class="searchbar">
+            <label for="searchBox-1">
+                <ion-icon name="search-outline"></ion-icon>
+            </label>
+            <input type="text" id="searchBox-1" name="searchbox" placeholder="Where are we going?">
+            <ul>
+            </ul>
+        </div>
     <section id="quick-access">
         <header>
             <h2>Hey</h2>
@@ -372,19 +372,22 @@
 
 
         <label class="package-location" for="p-from">Send package from:</label>
-        <input type="hidden" disabled id="select-p-from">
-        <select class="endpointSelect" id="p-from">
-
-        </select>
-
-        <ion-icon size="large" name="swap-vertical-outline"></ion-icon>
+        <input type="text" disabled="disabled" id="p-from">
+        <input type="hidden" disabled id="p-location">
 
         <label class="package-location" for="p-destination">Send package to:</label>
-        <input type="hidden" disabled id="select-p-destination">
-
-        <select class="endpointSelect" id="p-destination">
-
-        </select>
+        <input type="hidden" id="p-destination-value">
+        <div class="search-thingy">
+            <div class="package-endpoint-selection">
+                <label for="searchBox-1">
+                    <ion-icon name="search-outline"></ion-icon>
+                </label>
+                <input type="text" id="p-destination" name="searchbox" placeholder="Where are we going?">
+                <ul>
+                    <li>test</li>
+                </ul>
+            </div>
+        </div>
 
 
         <h2>Payment method</h2>
