--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
             <label for="searchBox-1">
                 <ion-icon name="search-outline"></ion-icon>
             </label>
-            <input type="text" id="searchBox-1" name="searchbox" placeholder="Where are we going?">
+            <input type="text" id="searchBox-1" name="searchbox" placeholder="Where are we going?" autocomplete="off">
             <ul>
             </ul>
         </div>
@@ -377,7 +377,7 @@
                 <label for="searchBox-1">
                     <ion-icon name="search-outline"></ion-icon>
                 </label>
-                <input type="text" id="p-destination" name="searchbox" placeholder="Where are we going?">
+                <input type="text" id="p-destination" name="searchbox" placeholder="Where are we going?" autocomplete="off">
                 <ul>
                     <li>test</li>
                 </ul>
@@ -387,7 +387,7 @@
 
         <h2>Payment method</h2>
         <div class="btn-group ">
-            <input type="checkbox" id="p-bank" name="paymentMethod" value="bank">
+            <input type="checkbox" id="p-bank" name="paymentMethod" value="bank" checked>
             <label for="p-bank">Pay with martian bank</label>
         </div>
         <div class="btn-group">
