--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Through an easily accessible network of travel tubes we want to allow goods and people to travel more efficiently than ever.">
     <title>Martian Travel Tube System</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
