--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Through an easily accessible network of travel tubes we want to allow goods and people to travel more efficiently than ever.">
     <title>Martian Travel Tube System</title>
 
-    <link rel="icon" href="favicon.ico" type="image/ico" sizes="16x16">
+    <link rel="icon" href="favicon.ico" type="image/x-icon" sizes="16x16">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Roboto:wght@300;400;700&display=swap"
