--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" translate="no">
+<html lang="en" translate="no" class="notranslate">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <meta name="google" content="notranslate">
     <meta name="description" content="Through an easily accessible network of travel tubes we want to allow goods and people to travel more efficiently than ever.">
     <title>Martian Travel Tube System</title>
 
