--- a/src/index.html
+++ b/src/index.html
@@ -351,10 +351,6 @@
         </div>
 
         <div class="btn-group first">
-            <input type="checkbox" id="bank" name="paymentMethod" value="bank" checked>
-            <label for="bank">Pay with martian bank</label>
-        </div>
-        <div class="btn-group">
             <input type="checkbox" id="reward-points" name="paymentMethod" value="rewardPoints">
             <label for="reward-points">Pay with reward points</label>
         </div>
@@ -399,22 +395,11 @@
                 <label for="searchBox-1">
                     <ion-icon name="search-outline"></ion-icon>
                 </label>
-                <input type="text" id="p-destination" name="searchbox" placeholder="Where are we going?" autocomplete="off">
+                <input type="text" id="p-destination" name="searchbox" placeholder="Where is your package going?" autocomplete="off">
                 <ul>
                     <li>test</li>
                 </ul>
             </div>
-        </div>
-
-
-        <h2>Payment method</h2>
-        <div class="btn-group ">
-            <input type="checkbox" id="p-bank" name="paymentMethod" value="bank" checked>
-            <label for="p-bank">Pay with martian bank</label>
-        </div>
-        <div class="btn-group">
-            <input type="checkbox" id="p-reward-points" name="paymentMethod" value="rewardPoints">
-            <label for="p-reward-points">Pay with reward points</label>
         </div>
 
 
