Changed bar to arrow

--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,7 @@
         </div>
     <section id="quick-access">
         <header>
+            <ion-icon name="caret-up-outline"></ion-icon>
             <h2>Hey</h2>
             <h3>you</h3>
             <div class="traveling">
